# ChangeLog for sys-devel/automake
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake/ChangeLog,v 1.154 2011/12/31 07:19:05 vapier Exp $

*automake-1.11.2 (31 Dec 2011)

  31 Dec 2011; Mike Frysinger <vapier@gentoo.org> +automake-1.11.2.ebuild:
  Version bump.

  21 Sep 2011; Michał Górny <mgorny@gentoo.org> automake-9999.ebuild:
  Migrate to git-2.

*automake-1.11.1-r1 (08 Apr 2011)

  08 Apr 2011; Mike Frysinger <vapier@gentoo.org> +automake-1.11.1-r1.ebuild,
  +files/automake-1.11.1-check-java.patch:
  Add fix by Petteri Räty for java handling #362323.

  31 May 2010; Joseph Jezak <josejx@gentoo.org> automake-1.11.1.ebuild:
  Marked ppc64 stable for bug #295947.

  18 Apr 2010; <nixnut@gentoo.org> automake-1.11.1.ebuild:
  ppc stable #295947

  13 Apr 2010; Raúl Porcel <armin76@gentoo.org> automake-1.11.1.ebuild:
  alpha/sparc stable wrt #295947

  11 Apr 2010; Mike Frysinger <vapier@gentoo.org> automake-1.11.1.ebuild:
  Mark arm/ia64/s390/sh stable #295947.

  09 Apr 2010; Pacho Ramos <pacho@gentoo.org> automake-1.11.1.ebuild:
  amd64 stable, bug 295947

  29 Mar 2010; Jeroen Roovers <jer@gentoo.org> automake-1.11.1.ebuild:
  Stable for HPPA (bug #295947).

  13 Mar 2010; Raúl Porcel <armin76@gentoo.org> automake-1.4_p6-r1.ebuild,
  automake-1.5-r1.ebuild, automake-1.6.3-r1.ebuild,
  automake-1.7.9-r2.ebuild, automake-1.8.5-r4.ebuild,
  automake-1.9.6-r3.ebuild, automake-1.10.3.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #295357

  09 Mar 2010; Joseph Jezak <josejx@gentoo.org> automake-1.4_p6-r1.ebuild,
  automake-1.5-r1.ebuild, automake-1.6.3-r1.ebuild,
  automake-1.7.9-r2.ebuild, automake-1.8.5-r4.ebuild,
  automake-1.9.6-r3.ebuild, automake-1.10.3.ebuild:
  Marked ppc stable for bug #295357.

  07 Mar 2010; Markus Meier <maekke@gentoo.org> automake-1.4_p6-r1.ebuild,
  automake-1.5-r1.ebuild, automake-1.6.3-r1.ebuild,
  automake-1.7.9-r2.ebuild, automake-1.8.5-r4.ebuild,